--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,33 @@ ENV/
 # IDE
 .vscode/
 .idea/
+*.sublime-*
 
-# Logs
+# Logs and data
 *.log
+container_metadata.json
+metadata/
 
 # Environment
 .env
+.env.local
 
 # OS
 .DS_Store
+Thumbs.db
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Build
+build/
+dist/
+*.egg-info/
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
