--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-
+## use this build and run locally 
 version: '3'
 services:
   composr:
@@ -9,11 +9,11 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./:/app  # Mount code for development
-      - /home/joe:/home/joe  # Your home directory with all compose files
+      - /home/joe:/app/pro  # Your home directory with all compose files
       - ./metadata:/app/metadata  # Store metadata persistently
     environment:
       - COMPOSE_DIR=/home/joe/docker/home  # Look for compose files here
-      - EXTRA_COMPOSE_DIRS=/home/joe/docker/media-server:/home/joe/docker/services:/home/joe/docker/caddy:/home/joe/docker/ocdarr  # Extra directories to scan
+      - EXTRA_COMPOSE_DIRS=/home/joe/docker/media-server:/home/joe/docker/services:/home/joe/docker/caddy:/home/joe/docker/ocdarr  # Extra directories to scan, my example
       - METADATA_DIR=/app/metadata  # Store settings here
       - CADDY_CONFIG_DIR=/home/joe/config/caddy
     restart: unless-stopped
